Bug 1971053 - patch 1 - Minor cleanup in gfxFontGroup. r=layout-reviewers,emilio

Just cleaning up the gfxFontGroup constructor; no functional change.

Differential Revision: https://phabricator.services.mozilla.com/D253739